SERVER-54296 Fix incorrect cache size estimate logic in lookup_set_cache.h

(cherry picked from commit abf0352882f93e760537d612401eb9fb6e5a030e)